[package]
name = "sapling-sitter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-recursion = "1.0.2"
ntest = "0.9.0"
serde = { version = "1.0.130", features = ["derive"] }
smallbitvec = "2.5"
tokio = { version = "1.26.0", features = ["full"] }

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]
